First commited as before_64171_rev1